Fix label tooltip not showing in absence of stone

--- a/css/goban.css
+++ b/css/goban.css
@@ -82,6 +82,9 @@
         width: calc(100% - .08em);
         height: calc(100% - .08em);
     }
+    .shudan-vertex.shudan-sign_0 .shudan-stone {
+        pointer-events: none;
+    }
     .shudan-vertex .shudan-shadow {
         border-radius: 50%;
     }
